--- a/css/styles.css
+++ b/css/styles.css
@@ -70,12 +70,32 @@ a {
   border: none;
   padding: 10px 32px;
   margin-top: 30px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-bold:hover,
 .btn-bold:focus {
   color: var(--white-color);
   background-color: var(--focus-hover-color);
+}
+
+.modal {
+  position: relative;
+}
+
+.btn-modal {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .filter-button {
@@ -91,6 +111,7 @@ a {
   border-radius: 4px;
   border: none;
   padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button:hover,
@@ -144,8 +165,23 @@ a {
   margin-right: 50px;
 }
 
+.menu-link {
+  position: relative;
+}
+
 .menu-link.current {
   color: var(--accent-color);
+}
+
+.menu-link.current::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  display: block;
+  bottom: -32px;
+  background-color: #2196F3;
+  border-radius: 2px;
 }
 
 .menu-list {
@@ -158,6 +194,7 @@ a {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--header-title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-link {
@@ -168,11 +205,7 @@ a {
   color: var(--primary-text-color);
   display: flex;
   align-items: center;
-}
-
-.adress-icon {
-  fill: var(--primary-text-color);
-  margin-right: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-item:not(:first-child) {
@@ -182,6 +215,12 @@ a {
 .adress-link:focus,
 .adress-link:hover {
   color: var(--accent-color);
+}
+
+.adress-icon {
+  fill: var(--primary-text-color);
+  margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-link:hover .adress-icon,
@@ -224,6 +263,35 @@ a {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+ 
+}
+
 
 .section {
   padding-top: 94px;
@@ -311,6 +379,9 @@ a {
   width: 100%;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .works-text {
@@ -321,7 +392,7 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--white-color);
-  padding: 27px;
+  
 }
 
 .team-list {
@@ -376,6 +447,13 @@ a {
 
 .social-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+  fill: var(--white-color);
+  
 }
 
 .social-link {
@@ -383,10 +461,10 @@ a {
   height: 100%;
   background-color: var(--white-color);
   border-radius: 50%;
-  display: block;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -394,10 +472,7 @@ a {
   background-color: var(--accent-color);
 }
 
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
-  fill: var(--white-color);
-}
+
 
 .client-list {
   display: flex;
@@ -417,15 +492,17 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.client-icon {
-  fill: #afb1b8;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
 .client-link:focus {
   border: 1px solid #2196f3;
+}
+
+.client-icon {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover .client-icon,
@@ -458,9 +535,7 @@ a {
 }
 
 .projects-item {
-  background: var(--white-color);
   border: 1px solid #eeeeee;
-  box-sizing: border-box;
   width: 370px;
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
@@ -474,6 +549,15 @@ a {
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-link {
+  width: 100%;
+}
+
+.project-image-wrap {
+  position: relative;
+  overflow: hidden;
 }
 
 .projects-container {
@@ -498,6 +582,36 @@ a {
   color: var(--primary-text-color);
   margin-top: 4px;
 }
+
+.project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 24px;
+  padding-right: 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+}
+
+
+.projects-item:hover .project-overlay {
+  transform: translateY(0);
+}
+
+.project-overlay-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--white-color)
+}
+
 /*------------------footer------------------*/
 
 .footer-container {
@@ -577,6 +691,12 @@ a {
 
 .connect-icon {
   fill: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.connect-link:hover .connect-icon,
+.connect-link:focus .connect-icon {
+  fill: var(--white-color);
 }
 
 .connect-link {
@@ -588,6 +708,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .connect-link:hover,
@@ -595,7 +716,4 @@ a {
   background-color: var(--accent-color);
 }
 
-.connect-link:hover .connect-icon,
-.connect-link:focus .connect-icon {
-  fill: var(--white-color);
-}
+
